--- a/chrome-extension/stylesheets/main.css
+++ b/chrome-extension/stylesheets/main.css
@@ -87,6 +87,14 @@ input[type=password] {
     width: 100px;
     -webkit-border-radius:6px;
 }
+#tool-panel #parse-grid {
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 20px;
+    padding:2px 7px;
+    width: 150px;
+    -webkit-border-radius:6px;
+}
 #tool-panel #rectangle { border-left:1px solid #efefef; }
 #tool-panel #text { border-right:1px solid #c1c1c1; }
 #tool-panel #color { -webkit-border-top-right-radius:6px; -webkit-border-bottom-right-radius:6px; position:relative; padding-right:6px; border-left:1px solid #efefef; margin-right:10px; }
@@ -101,7 +109,7 @@ input[type=password] {
     font-size:14px;
     line-height:20px;
 }
-#tool-panel #done, #tool-panel #cancel, #tool-panel #gridify-config{ display:none; }
+#tool-panel #done, #tool-panel #cancel, #tool-panel #gridify-config, #tool-panel #parse-grid { display:none; }
 #tool-panel #done { margin-right:20px; font-size:13px !important; font-weight:bold; }
 #tool-panel>div>a#save {
     margin-left:40px;
@@ -287,6 +295,7 @@ li#diigo_web_highlighter:hover a {
 #exit:hover span { background-position:-320px 0; }
 
 #gridify b { background-position:-20px 0; }
+#parse-grid b { background-position:-180px -40px; }
 #rectangle span { background-position:-20px 0; }
 #ro-rectangle span {background-position:-20px 0; }
 #ellipse span { background-position:-40px 0; }
